--- a/lock_detail.html
+++ b/lock_detail.html
@@ -28,15 +28,155 @@
     </section>
 
     <!--container list-->
-    <section class="text-left">
-        <div class="wrap sn-big-title color-orange">
-            云锁服务
+    <section class="sn-lock-detail border-bottom-blue">
+        <div class="wrap text-left">
+            <ul class="sn-nav-tabs ">
+                <li class="">
+                    <a data-id="#tab_1" href="javascript:void (0);" >产品信息</a>
+                </li>
+                <li class="">
+                    <a data-id="#tab_2" href="javascript:void (0);" >技术参数</a>
+                </li>
+                <li class="active">
+                    <a data-id="#tab_3" href="javascript:void (0);" >申请试用</a>
+                </li>
+                <li class="">
+                    <a data-id="#tab_4" href="javascript:void (0);" >SDK下载</a>
+                </li>
+                <li class="">
+                    <a  href="javascript:void (0);" >进入商城</a>
+                </li>
+            </ul>
         </div>
     </section>
+    <section class="sn-lock-detail">
+        <div class="wrap text-left">
+            <div class="sn-tab-content clear-fix">
+                <div id="tab_1" class="sn-tab-pane ">
+                    <div class="fl sn-ld-pic">
+                        <img class="dn-ldp-preview" src="images/locks/l5.png">
+                        <div class="dn-ldp-list border-top-grey">
+                            <img src="images/locks/l5.png">
+                            <img src="images/locks/l5.png">
+                            <img src="images/locks/l5.png">
+                        </div>
+                    </div>
+                    <div class="fr sn-ld-detail">
+                        <p class="sn-ld-section-title">产品信息</p>
+                        <p class="sn-ld-desc margin-t-20 font-size-16">
+                            秉承软件保护行业最先进的硬件技术和设计理念，精锐5是软件企业互联网化过程中保护软件授权的不二之选。
+                            <br/><br>
+                            精锐5与深思云锁在软件保护功能方面100%兼容，软件可以自由选择用精锐5还是深思云锁保护授权，并可以实现在运行时的无缝切换。授权也可以在精锐5和云锁之间转移，以满足用户的不同使用偏好。
+                        </p>
+                        <p class="sn-ld-title font-size-18">以下版本可供选择</p>
+                        <table class="sn-ld-version">
+                            <tr>
+                                <th></th><th>旗舰版</th><th>标准版</th><th>基础班</th>
+                            </tr>
+                            <tr>
+                                <td>最大可用存储</td><td>512K</td><td>256K</td><td>128K</td>
+                            </tr>
+                            <tr>
+                                <td>最多授权个数</td><td>6000</td><td>3000</td><td>1500</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div id="tab_2" class="sn-tab-pane ">
+                    <p class="sn-ld-section-title">精锐5具有的特点：</p>
+                    <p class="sn-ld-feature">
+                        全部激光打码，锁内外二码合一<br>
+                        设备全球唯一序列号<br>
+                        CC EAL5+安全认证芯片<br>
+                        32位ARM核CPU<br>
+                        USB 2.0全速通信<br>
+                        与深思云锁无缝兼容<br>
+                    </p>
+                    <p class="sn-ld-section-title margin-t-20">基本参数：</p>
+                    <table class="sn-ld-params">
+                        <tr><td width="300">芯片安全等级</td><td>CC EAL5+</td><td width="300">原封全进口智能卡芯片</td></tr>
+                        <tr><td>CPU</td><td>32位 ARM</td><td></td></tr>
+                        <tr><td>USB</td><td>USB 2.0全速</td><td></td></tr>
+                    </table>
 
+                    <p class="sn-ld-section-title">技术规格：</p>
+                    <table class="sn-ld-params">
+                        <tr><td width="300">扇区内擦写次数</td><td>＞1650万次</td><td width="300"></td></tr>
+                        <tr><td>数据存储寿命</td><td>＞10年</td><td></td></tr>
+                        <tr><td>USB通信速度</td><td>＞300 KB/秒</td><td></td></tr>
+                        <tr><td>密码算法</td><td>RSA2048,ECC256,AES256,SHA1</td><td></td></tr>
+                        <tr><td>最大功率</td><td>100 mw</td><td></td></tr>
+                        <tr><td>工作温度范围</td><td>-15 ~ 80 ℃</td><td></td></tr>
+                        <tr><td>工作电压</td><td>4.5 ~ 5.5V</td><td></td></tr>
+                        <tr><td>带高压保护</td><td>最高可耐受20V输入电压</td><td></td></tr>
+                        <tr><td>驱动程序</td><td>有驱/无驱自适应</td><td></td></tr>
+                        <tr><td>最大授权数</td><td>6000</td><td>不同型号</td></tr>
+                    </table>
 
+                    <p class="sn-ld-section-title">平台支持：</p>
+                    <table class="sn-ld-params">
+                        <tr><td width="300">Windows</td><td>Windows XP以上</td><td width="300"></td></tr>
+                    </table>
+                </div>
+                <div id="tab_3" class="sn-tab-pane active">
+                    <p class="sn-ld-section-title">基本信息</p>
+                    <div class="sn-input-inline margin-t-20">
+                        <div class="sn-input-group">
+                            <label>姓名：</label>
+                            <input type="text" placeholder="请填写您的真实姓名">
+                        </div>
+                    </div>
+                    <div class="sn-input-inline">
+                        <div class="sn-input-group">
+                            <label>邮箱：</label>
+                            <input type="text" placeholder="请填写您的真实邮箱">
+                        </div>
+                    </div>
+                    <div class="sn-input-inline">
+                        <div class="sn-input-group">
+                            <label>电话：</label>
+                            <input type="text" placeholder="请填写您的有效电话">
+                        </div>
+                    </div>
+                    <div class="sn-input-inline">
+                        <div class="sn-input-group">
+                            <label class="width-80">公司名称：</label>
+                            <input type="text" placeholder="请填写您的公司名称">
+                        </div>
+                    </div>
 
-
+                    <p class="sn-ld-section-title margin-t-20">申请使用的产品</p>
+                    <p class="margin-t-20">精锐5-试用版</p>
+                    <p class="sn-ld-section-title margin-t-20">软件的类别</p>
+                    <div class="sn-input-group margin-t-20">
+                        <input type="text" placeholder="请填写您的软件类别，例如：游戏软件">
+                    </div>
+                    <p class="sn-ld-section-title">您对加密锁的要求</p>
+                    <textarea class="sn-ld-textarea" rows="10" placeholder="请填写你对加密锁的要求，请如实填写。"></textarea>
+                    <div class="sn-ld-btn-list text-center">
+                        <button class="sn-ld-btn center">申请试用</button>
+                    </div>
+                </div>
+                <div id="tab_4" class="sn-tab-pane ">
+                    <p class="sn-ld-section-title">相关下载</p>
+                    <ul>
+                        <li>
+                            <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
+                            <p class="sn-ld-desc">
+                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
+                            </p>
+                            <div class="sn-ld-btn-list">
+                                <button class="sn-ld-btn download">SDK下载</button>
+                                <button class="sn-ld-btn">SDK下载</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div id="tab_5" class="sn-tab-pane ">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
