--- a/header.html
+++ b/header.html
@@ -135,6 +135,7 @@
                 <a href="javascript:void(0);" data-url="support" class="js_location_url" >资源</a>
                 <ul class="sub-menu ">
                     <li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>
+                    <li><a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案</a></li>
                     <li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>
                     <li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>
                     <li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>
